--- a/Licenta/Licenta/ViewControllers/DARLogInViewController.xib
+++ b/Licenta/Licenta/ViewControllers/DARLogInViewController.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DARLogInViewController">
             <connections>
+                <outlet property="beaconTickImage" destination="daw-Q4-O5u" id="ngK-ld-kvK"/>
+                <outlet property="bleTickImage" destination="0CX-kn-XNc" id="OXr-su-KXt"/>
                 <outlet property="greyView" destination="AKV-Lb-fJ7" id="0xe-6R-8a0"/>
                 <outlet property="logo" destination="Nsm-LH-pDY" id="Rpm-Ek-i1A"/>
                 <outlet property="settingsView" destination="TmI-tk-tHr" id="fu7-Zg-ZWD"/>
@@ -29,6 +31,10 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Nsm-LH-pDY">
+                    <rect key="frame" x="91" y="223" width="135" height="46"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                </imageView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TmI-tk-tHr" userLabel="View - settingsView">
                     <rect key="frame" x="20" y="80" width="278" height="115"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -46,6 +52,10 @@
                                 <action selector="selectBle:" destination="-1" eventType="touchUpInside" id="MUN-Pp-vY4"/>
                             </connections>
                         </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tick.png" translatesAutoresizingMaskIntoConstraints="NO" id="0CX-kn-XNc">
+                            <rect key="frame" x="50" y="70" width="40" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzM-3W-wV9">
                             <rect key="frame" x="139" y="0.0" width="139" height="115"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -59,13 +69,13 @@
                                 <action selector="selectBeacon:" destination="-1" eventType="touchUpInside" id="qZE-m6-3kV"/>
                             </connections>
                         </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tick.png" translatesAutoresizingMaskIntoConstraints="NO" id="daw-Q4-O5u">
+                            <rect key="frame" x="190" y="70" width="40" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Nsm-LH-pDY">
-                    <rect key="frame" x="91" y="223" width="135" height="46"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q1L-YU-7zo">
                     <rect key="frame" x="20" y="450" width="280" height="35"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -93,8 +103,9 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LcE-Rp-XeK">
-                    <rect key="frame" x="240" y="20" width="58" height="30"/>
+                    <rect key="frame" x="220" y="25" width="78" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Settings">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -263,5 +274,6 @@
         <image name="icon_x_over.png" width="80" height="80"/>
         <image name="logo.png" width="271" height="92"/>
         <image name="textfield_background.png" width="512" height="88"/>
+        <image name="tick.png" width="600" height="556"/>
     </resources>
 </document>
